# moodmap

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: pytest.yml  ruff-check.yml
backend/: Dockerfile  manage.py  openapi.yaml  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: import_places.py
backend/api/migrations/: 0001_initial.py  0002_remove_user_bio_remove_user_profile_picture_user_age_and_more.py  0003_mood.py  0004_alter_user_username.py  0004_category_place_visitedplace_favouriteplace.py  0005_alter_mood_options_alter_user_options.py  0006_merge_20250218_0710.py  0007_remove_place_address.py  0008_remove_visitedplace_place_remove_visitedplace_user_and_more.py  0009_alter_place_category.py  0010_moodentry.py  0011_feelingtag_moodentry_feelings.py  0012_activitycategory_activity.py  0012_activitycategory_activity_favouriteactivity.py  0013_alter_activity_category.py
backend/api/tests/: conftest.py  factories.py  test_serializers.py  test_views.py
backend/config/: settings.py  urls.py
backend/scrapping/: balancedataset.py  cleandataset.py  preparentegerbdd.py  scrapper.py  vadormodel.py
backend/scrapping/repocsv/: reviews.csv  reviews_cleaned.csv  reviews_completed.csv  singapore.csv  singapore_with_moods.csv
backend/scrapping/repocsv/finalbdddata/: restaurants_moods_balanced.csv
moodmap/: README.md  pubspec.yaml
moodmap/android/: build.gradle
moodmap/lib/: main.dart
moodmap/linux/: CMakeLists.txt  my_application.cc
(+45 files in other folders)
